[package]
name = "infinite_db_step"
version = "0.2.0"
edition = "2021"
description = "Import STEP (ISO 10303-21) CAD files into InfiniteDB spatial records"
readme = "README.md"
license = "MIT"
repository = "https://github.com/joneseysinno/infinite-db-step"
keywords = ["step", "cad", "infinite-db", "brep", "spatial"]
categories = ["database-implementations", "science"]
exclude = ["target/**", "step_db/**"]

[lib]
name = "infinite_db_step"
path = "src/lib.rs"

[features]
default = ["parallel"]
parallel = ["dep:rayon"]
log = ["dep:log", "dep:env_logger"]

[dependencies]
infinite-db = "0.2.0"
bincode = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v5"] }
log = { version = "0.4", optional = true }
rayon = { version = "1", optional = true }
env_logger = { version = "0.11", optional = true }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "import-step"
path = "src/bin/import_step.rs"
